--- a/v3/style2.css
+++ b/v3/style2.css
@@ -31,3 +31,12 @@ svg .yearLabel {
 	margin: auto;
 }
 
+.buttonBox {
+	width: 130px;
+	margin: auto;
+}
+button {
+	width: 60px;
+	display: inline-block;
+	font-size: 32px;
+}
